apps/team-alpha/reporting-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-api
  namespace: team-alpha
  labels:
    app: reporting-api
    team: team-alpha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reporting-api
  template:
    metadata:
      labels:
        app: reporting-api
        team: team-alpha
    spec:
      containers:
        - name: reporting-api
          image: ecps-reporting-api:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
